# Feck

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  snapcraft.yaml  thefeck.rb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
feck_integrations/: batfeck.py  curlfeck.py
feck_integrations/docs/: batfeck.md  curlfeck.md
feck_npm_wrapper/: install.js  package.json
scripts/: feck.bat  feck.ps1
tests/: conftest.py  test_conf.py  test_corrector.py  test_readme.py  test_types.py  test_ui.py  test_utils.py
tests/entrypoints/: test_alias.py  test_fix_command.py
tests/functional/: plots.py  test_bash.py  test_fish.py  test_tcsh.py  test_zsh.py
tests/output_readers/: test_rerun.py
tests/rules/: test_adb_unknown_command.py  test_ag_literal.py  test_apt_get_search.py  test_apt_invalid_operation.py  test_apt_list_upgradable.py  test_brew_install.py  test_brew_reinstall.py  test_brew_update_formula.py  test_cat_dir.py  test_cd_correction.py  test_cd_cs.py  test_cd_mkdir.py  test_choco_install.py  test_composer_not_command.py  test_conda_mistype.py  test_cp_create_destination.py  test_dirty_untar.py  test_dirty_unzip.py  test_docker_login.py  test_dry.py  test_fix_alt_space.py  test_fix_file.py  test_git_branch_0flag.py  test_git_branch_delete_checked_out.py  test_git_branch_exists.py  test_git_checkout.py  test_git_clone_git_clone.py  test_git_clone_missing.py  test_git_commit_add.py  test_git_commit_amend.py  test_git_commit_reset.py  (+39 more)
thefuck/: conf.py  const.py  corrector.py  logs.py  types.py  ui.py  utils.py
(+53 files in other folders)
